--- a/styles.css
+++ b/styles.css
@@ -89,14 +89,22 @@
 	align-items: center;
 }
 
-.like-button,
-.delete-button {
+.like-button {
 	border: none;
 	background-color: transparent;
 	padding: 8px;
 	padding-left: 0px;
 	padding-bottom: 5px;
 	cursor: pointer;
+}
+
+.delete-button {
+	border: 2px solid #696969;
+	border-radius: 8px;
+	background-color: transparent;
+	padding: 0px 12px;
+	cursor: pointer;
+	margin: 6px;
 }
 
 .user-name {
