--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 	padding: 20px 16px;
 	margin-left: -20px;
 	margin-right: -20px;
+	background-color: #fff;
 }
 
 .logo {
@@ -21,6 +22,8 @@
 
 .header-container {
 	margin-bottom: 8px;
+	position: sticky;
+	top: 0px;
 }
 
 .header-button {
@@ -177,6 +180,10 @@
 
 .form-error {
 	color: red;
+}
+
+.error {
+	box-shadow: 0px 0px 10px 5px red inset;
 }
 
 .form-footer {
